--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -752,4 +752,5 @@ Objekt bude ostrý na rozmazaném pozadí."</string>
   <string name="beauty_clear">Vymazat</string>
   <string name="beauty_clear_toast">Efekty zkrášlení jsou odstraněny</string>
   <string name="edit_hairline">Účes</string> 
+  <string name="ultra_wide_recommend_tip_hint_sat">Vyzkoušejte 0.6X Ultra široký úhel záběru</string>
 </resources>
