--- a/Czech/main/CloudBackup.apk/res/values-cs/strings.xml
+++ b/Czech/main/CloudBackup.apk/res/values-cs/strings.xml
@@ -210,5 +210,28 @@ Poznámka: Nastavení doinstalovaných aplikací nebude zálohováno na MiCloud.
   <string name="restoring_settings">Obnovení Nastavení...</string>
   <string name="hint_restore_cross_space">Pokud přesouváte položky mezi profily, rozložení ikon může být zobrazeny nesprávně.</string>
   <string name="selected">Vybráno</string>
-  <string name="unselected">Nevybráno</string>  
+  <string name="unselected">Nevybráno</string> 
+  <string name="btn_restore_continue">Obnovit</string>
+  <string name="btn_restore_wait">Čekat na Wi-Fi</string>
+  <string name="desktop_wait_network">Čekání...</string>
+  <string name="doing_calc_backup_data_size">Výpočet velikosti...</string>
+  <string name="msg_restore_start_with_metered_network">Vaše plocha bude znovu načtena. Zálohované aplikace se automaticky stáhnou. Bude staženo %s souborů.</string>
+  <string name="msg_restore_with_metered_network_hint">Pokud budete pokračovat, budou použity mobilní data pro stažení zálohy.</string>
+  <string name="msg_restore_with_metered_network_pattern">Bude stažených %s souborů.</string>
+  <string name="restore_app_order_finish">Hotovo</string>
+  <string name="restore_app_order_loading">Načítání...</string>
+  <string name="restore_app_order_retry">Zkusit znovu</string>
+  <string name="restore_app_order_retry_desc">Nebylo možné připojit se k síti.</string>
+  <string name="restore_app_order_search_hint">Vyhledat položky pro určení priority</string>
+  <string name="restore_app_order_search_installed">Aplikace v tomto zařízení</string>
+  <string name="restore_app_order_search_normal">normální priorita</string>
+  <string name="restore_app_order_search_prior">Vysoká priorita</string>
+  <string name="restore_app_order_title">Určit prioritu obnovení</string>
+  <string name="restore_detail_category_apps">Rozložení plochy a aplikace</string>
+  <string name="restore_detail_category_settings">Nastavení</string>
+  <string name="restore_detail_more">Více</string>
+  <string name="restore_detail_title">Vyberte položky na obnovení</string>
+  <string name="restore_network_pause">%s (Dotykem budete pokračovat)</string>
+  <string name="restore_network_unconnect">%s (Čekání na připojení)</string>
+  <string name="title_restore_with_current_network">Stahování položek přes současné připojení</string>   
 </resources>
