--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5668,10 +5668,10 @@ Tato funkcia vyžaduje povolení pro přístup k vaší poloze, používání mo
   <string name="none">Žádné</string>
   <string name="notifi_channels">kategorie upozornění</string>
   <string name="notifi_channels_other">Ostatní</string>
-  <string name="notifi_importance_default">Zobrazit všude, přehrát zvuk ale ne vizuálně.</string>
-  <string name="notifi_importance_high">Zobrazit všude a přehrát zvuk.</string>
-  <string name="notifi_importance_low">Zobrazit všude ale nevyrušovat.</string>
-  <string name="notifi_importance_min">Zobrazit jen v roletce</string>
+  <string name="notifi_importance_default">Přehrát zvuk a zobrazit na zamykací obrazovce.</string>
+  <string name="notifi_importance_high">Přehrát zvuk a zobrazit na zamykací obrazovce, povolit na celé obrazovce.</string>
+  <string name="notifi_importance_low">Nepřehrávat zvuk.</string>
+  <string name="notifi_importance_min">Nezobrazovat na zamčené obrazovce a nepřehrávat zvuk</string>
   <string name="notifi_importance_none">Vypnuto</string>
   <string name="notifi_importance_unspecified">Ponechat na aplikací</string>
   <string name="notifi_no_channels">Tato aplikace nemá žádné upozornění</string>
@@ -5803,4 +5803,37 @@ Tato funkcia vyžaduje povolení pro přístup k vaší poloze, používání mo
   <string name="long_press_power_key_tips">Dlhé podržanie Zapínania > Rýchlejšie a pohodlnejšie</string>
   <string name="toggle_auto_speaker_preference_summary">Zařízení se přepne na reproduktor pokud jej oddálíte od ucha během hovoru. Tato funkce pracuje pouze s povoleným TalkBack.</string>
   <string name="toggle_auto_speaker_preference_title">Automaticky přepnout na reproduktor</string> 
+  <string name="auto_dual_clock_aod_summary">Zobrazit duální hodiny pokud je rozdílný čas od hlavních hodin</string>
+  <string name="call_records_name_1">Bruce Wayne</string>
+  <string name="call_records_name_2">Clark Kent</string>
+  <string name="call_records_name_3">Tony Stark</string>
+  <string name="call_records_summary_1">9:35 | 26 s | Orange</string>
+  <string name="call_records_summary_2">August 16 | 1m 16s | O2</string>
+  <string name="call_records_summary_3">August 16 | 2m 24s | Telekom</string>
+  <string name="dual_clock_aod_open_message">Duální hodiny budou zobrazeny na zamykací obrazovce, ploše a AOD.</string>
+  <string name="gxzw_enroll_again">Zvedněte prst a stiskněte znovu skener otisku prstu</string>
+  <string name="launcher_icon">Ikony</string>
+  <string name="layout_exhuge_font_take_effect_tips">XXL text bude zobrazen pouze v aplikací Telefon, SMS a Kontakty</string>
+  <string name="layout_exhuge_font_tips">Více nastavení najdete v %1$s</string>
+  <string name="layout_exhuge_font_tips_reg">Usnadnění přístupu a Displej</string>
+  <string name="page_layout_34">Telefon</string>
+  <string name="page_layout_35">Poznámky</string>
+  <string name="page_layout_confirm_message_enlarge">Text, obrázky a ikony budou zvětšené.</string>
+  <string name="page_layout_confirm_message_narrow">Text, obrázky a ikony budou zmenšeny.</string>
+  <string name="page_layout_confirm_title_enlarge">Větší položky</string>
+  <string name="page_layout_confirm_title_narrow">Menší položky</string>
+  <string name="words_title">Text</string>
+  <string name="notification_fold_footer_icon_summary">Všechny méně důležité ikony upozornění budou zobrazeny v pravé části</string>
+  <string name="notification_fold_footer_icon_title">Zobrazit ikony</string> 
+  <string name="ai_button_title">Mi AI tlačítko</string>
+  <string name="ai_button_title_global">AI tlačítko</string>
+  <string name="ai_settings_click_title">Stisk</string>
+  <string name="ai_settings_double_click_category">Dvojité stisknutí AI tlačítka</string>
+  <string name="ai_settings_double_click_title">Dvojitý stisk</string>
+  <string name="ai_settings_long_click_category">Stisk a držení AI tlačítka</string>
+  <string name="ai_settings_long_click_title">Stisk a držení</string>
+  <string name="ai_settings_single_press_des">Stiskněte AI tlačítko pro mluvení Google asistentovi, pak pusťte pro odpověď.</string>
+  <string name="passport_user_reg_region">Krajina/Region</string>
+  <string name="passport_user_reg_region_warning">Po vytvoření účtu nebude možné změnit zemi.</string>
+  <string name="push_notify_dialog_title">Ověření účtu</string> 
 </resources>
