--- a/Czech/main/TeleService.apk/res/values-cs/strings.xml
+++ b/Czech/main/TeleService.apk/res/values-cs/strings.xml
@@ -1299,4 +1299,5 @@ Počet dní do začátku dalšího období: %2$d (%3$s)"</string>
   <string name="sip_receive_call_disable">Nelze přijmout hovor.</string>
   <string name="jump_to_mobile_network_setting">Nastavení mobilní sítě</string>
   <string name="select_dds_dialog_title">Vyberte výchozí SIM pro data</string>
+  <string name="fiveg_switch_title">5G síť</string>
 </resources>
